# powsybl-powerfactory-db-native

./: .gitignore  CMakeLists.txt  README.md  db.cpp  main.cpp  pom.xml
src/: Api.cpp  Api.h  db.cpp  jniwrapper.cpp  jniwrapper.hpp  main.cpp
